<resources>
    <string name="app_name">MRPC</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="sort_list">Sort List</string>
    <string name="cek_update">Cek Update</string>
    <string name="backup_data">Backup Data</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="aplikasi_lainnya">Aplikasi Lainnya</string>
    <string name="donasi">Donasi</string>
    <string name="header_on_rakithomelist">Mari Buat PC Mu</string>
    <string name="rakit">Rakit</string>
</resources>